--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -13,6 +13,19 @@ security:
     dev:
       pattern: ^/(_(profiler|wdt)|css|images|js)/
       security: false
+    login:
+      pattern: ^/api/login
+      stateless: true
+      json_login:
+        check_path: /api/login_check
+        success_handler: lexik_jwt_authentication.handler.authentication_success
+        failure_handler: lexik_jwt_authentication.handler.authentication_failure
+
+    api:
+      pattern: ^/api
+      stateless: true
+      jwt: ~
+
     main:
       lazy: true
       provider: app_user_provider
@@ -35,7 +48,10 @@ security:
   access_control:
     - { path: ^/admin/login, roles: PUBLIC_ACCESS }
     - { path: ^/admin/espacio, roles: ROLE_SUPERADMIN }
-    - { path: ^/admin, roles: IS_AUTENTICATED_FULLY}
+    - { path: ^/admin, roles: IS_AUTENTICATED_FULLY }
+
+    - { path: ^/api/login, roles: PUBLIC_ACCESS }
+    - { path: ^/api, roles: IS_AUTHENTICATED_FULLY }
     # - { path: ^/profile, roles: ROLE_USER }
 
 when@test:
