--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -48,9 +48,10 @@ security:
   access_control:
     - { path: ^/admin/login, roles: PUBLIC_ACCESS }
     - { path: ^/admin/espacio, roles: ROLE_SUPERADMIN }
-    - { path: ^/admin, roles: IS_AUTENTICATED_FULLY }
+    - { path: ^/admin, roles: ROLE_USER }
 
     - { path: ^/api/login, roles: PUBLIC_ACCESS }
+    - { path: ^/api/espacio, roles: ROLE_SUPERADMIN }
     - { path: ^/api, roles: IS_AUTHENTICATED_FULLY }
     # - { path: ^/profile, roles: ROLE_USER }
 
