--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -25,6 +25,8 @@ security:
       pattern: ^/api
       stateless: true
       jwt: ~
+      refresh_jwt:
+        check_path: /api/token/refresh # or, you may use the `api_refresh_token` route name
 
     main:
       lazy: true
@@ -50,7 +52,7 @@ security:
     - { path: ^/admin/espacio, roles: ROLE_SUPERADMIN }
     - { path: ^/admin, roles: ROLE_USER }
 
-    - { path: ^/api/login, roles: PUBLIC_ACCESS }
+    - { path: ^/api/(login|token/refresh), roles: PUBLIC_ACCESS }
     - { path: ^/api/espacio, roles: ROLE_SUPERADMIN }
     - { path: ^/api, roles: IS_AUTHENTICATED_FULLY }
     # - { path: ^/profile, roles: ROLE_USER }
