--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -21,12 +21,16 @@ security:
         success_handler: lexik_jwt_authentication.handler.authentication_success
         failure_handler: lexik_jwt_authentication.handler.authentication_failure
 
+    api_token_refresh:
+      pattern: ^/api/token/refresh
+      stateless: true
+      # user_checker: user_checker_service_id
+      refresh_jwt: ~
+
     api:
       pattern: ^/api
       stateless: true
       jwt: ~
-      refresh_jwt:
-        check_path: /api/token/refresh # or, you may use the `api_refresh_token` route name
 
     main:
       lazy: true
@@ -52,6 +56,7 @@ security:
     - { path: ^/admin/espacio, roles: ROLE_SUPERADMIN }
     - { path: ^/admin, roles: ROLE_USER }
 
+    # - { path: ^/api/login, roles: PUBLIC_ACCESS }
     - { path: ^/api/(login|token/refresh), roles: PUBLIC_ACCESS }
     - { path: ^/api/espacio, roles: ROLE_SUPERADMIN }
     - { path: ^/api, roles: IS_AUTHENTICATED_FULLY }
